# Booki

./: .gitignore  DOKUMENTASI_API.md  DOKUMENTASI_ARSITEKTUR.md  DOKUMENTASI_DATASET.md  DOKUMENTASI_EMBEDDING_VECTORSTORE.md  DOKUMENTASI_EVALUASI.md  DOKUMENTASI_GENERATION.md  DOKUMENTASI_PERUBAHAN.md  DOKUMENTASI_PHASE_1.md  DOKUMENTASI_PHASE_2.md  DOKUMENTASI_PIPELINE_INGESTION.md  DOKUMENTASI_RETRIEVAL_RERANKING.md  DOKUMENTASI_SCRIPTS_INTERFACE.md  DOKUMENTASI_SINKRONISASI.md  DOKUMENTASI_VERIFIKASI_BACKEND.md  INDEKS_DOKUMENTASI.md  README.md  pyproject.toml  run_api.py  system_integration_report.md
api/: app.py
api/routes/: admin.py  deep.py  recommend.py
chunking/: text_chunker.py
config/: settings.py
data/faiss/: rec_index.faiss  rec_index.meta.pkl
data/ground_truth/: precision_queries.jsonl  ragas_queries.jsonl
embedding/: embedder.py  vector_store.py
generation/: answer_generator.py
interface/: cli.py  index.html
interface/js/: admin.js  api.js  chat.js
parsing/: pdf_cleaner.py  pdf_parser.py
retrieval/: reranker.py  retriever.py
scripts/: add_book.py  delete_book.py  rechunk_fulltext.py  update_book.py  vacuum_vectorstore.py
summarization/: book_summarizer.py
tests/: test_backend_health.py
utils/: api_key_manager.py  file_utils.py  logger.py
