[project]
name = "capstone-rag-buku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "tabulate>=0.10.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow performance logic",
]
